# curve-study

./: brownie-config.yaml  pyproject.toml
interfaces/: LiquidityGauge.json
scripts/: gas.py  rewards.py  stake.py  token.py
scripts/helpers/: utils.py
tests/: conftest.py  test_curve.py
tests/helpers/: utils.py
tests/integrative/: test_3pool.py  test_rewards.py
